ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: postgres-operator
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/auth-url: http://user-microservice-service.postgres-operator.svc.cluster.local:80/auth
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Access-Control-Allow-Origin: $http_origin";


spec:
  # ingressClassName: nginx
  rules:
  - host: gss.info
    http:
      paths:
      - path: /activities(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: activities-microservice-service
            port:
              number: 80
  - host: gss.info
    http:
      paths:
      - path: /food(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: foodapi-microservice-service
            port:
              number: 80
  - host: gss.info
    http:
      paths:
      - path: /events(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: events-microservice-service
            port:
              number: 80
  - host: gss.info
    http:
      paths:
      - path: /calendar(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: calendar-microservice-service
            port:
              number: 80
  - host: gss.info
    http:
      paths:
      - path: /reservation(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: reservation-microservice-service
            port:
              number: 80
  - host: gss.info
    http:
      paths:
      - path: /users(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: user-microservice-service
            port:
              number: 80
